started responsive header

--- a/index.html
+++ b/index.html
@@ -28,18 +28,23 @@
       </div>
       <nav class="nav">
         <a href="store">STORE</a>
-        <a href="artists">ARTISTS</a>
+        <!-- <a href="artists">ARTISTS</a> -->
         <a href="about">ABOUT</a>
         <a href="#" class="cart">CART</a>
       </nav>
-      <div class="rainbow-strip">
-        <img src="images/header/header-rainbow-strip.svg" alt="Rainbow Strip">
-      </div>
       <div class="hamburger-icon">
         <img src="images/header/hamburger-icon.svg" alt="Hamburger Menu">
       </div>
     </header>
+
+    <!-- Rainbow Strip -->
+    <div class="rainbow-strip">
+      <img src="images/header/header-rainbow-strip.svg" alt="Rainbow Strip">
+    </div>
+
+    <!-- Header Spacer -->
     <div class="header-spacer"></div>
+
 
     <!-- Hero Section -->
     <div class="hero">
@@ -55,9 +60,9 @@
           <h1 class="hero-title">MYSTERY CLASS<br>RECORDS</h1>
           <p class="hero-detail">UNEXPLAINABLY GOOD MUSIC.</p>
         </div>
-        <div class="hero-star">
+        <!-- <div class="hero-star">
           <img src="images/star.svg" alt="Star Graphic">
-        </div>
+        </div> -->
       </div>
     </div>
     
@@ -179,7 +184,7 @@
         </div>
         <nav class="footer-nav">
           <a href="store">STORE</a>
-          <a href="artists">ARTISTS</a>
+          <!-- <a href="artists">ARTISTS</a> -->
           <a href="about">ABOUT</a>
         </nav>
       </div>
