--- a/store/mcr-002/index.html
+++ b/store/mcr-002/index.html
@@ -241,7 +241,7 @@
     </footer>
 
     <!-- Import Scripts -->
-    <script src="../../scripts/add-to-cart.js"></script>
+    <script src="../../scripts/AddToCart.js"></script>
 
   </body>
 </html>
