--- a/store/index.html
+++ b/store/index.html
@@ -20,25 +20,25 @@
 
 <body>
   <!-- Header Section -->
-  <header class="header">
+  <header class="header" data-expanded="false">
     <div class="logo">
-      <a href="../">
+      <a href="../index.html">
         <img src="../images/header/header-logo.svg" alt="Logo">
       </a>
     </div>
     <nav class="nav">
       <a href="../store">STORE</a>
-      <a href="../artists">ARTISTS</a>
+      <!-- <a href="artists">ARTISTS</a> -->
       <a href="../about">ABOUT</a>
       <a href="#" class="cart">CART</a>
     </nav>
-    <div class="rainbow-strip">
-      <img src="../images/header/header-rainbow-strip.svg" alt="Rainbow Strip">
-    </div>
     <div class="hamburger-icon">
-      <img src="../images/header/hamburger-icon.svg" alt="Hamburger Menu">
+      <button aria-label="Toggle Menu">
+        <img src="../images/header/hamburger-icon.svg" alt="Hamburger Menu">
+      </button>
     </div>
   </header>
+  <div class="rainbow-strip"></div>
   <div class="header-spacer"></div>
 
   <!-- Store Section -->
@@ -115,6 +115,7 @@
   </footer>
 
     <!-- Scripts -->
+    <script src="../scripts/MobileHeaderExpand.js"></script>
 
 </body>
 </html>
