footer finished on home

--- a/index.html
+++ b/index.html
@@ -104,65 +104,6 @@
           </div>
         </div>
 
-        <!-- Merch Block 2 -->
-        <div class="merch-block">
-          <div class="merch-block-image-container">
-            <a href="store/mcr-002/" class="merch-link">
-              <img src="images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
-            </a>
-          </div>
-          <div class="merch-block-details-container">
-            <div class="merch-block-names-container">
-              <a href="store/mcr-002/" class="merch-link">
-                <p class="merch-block-artist-name">CRYHARD</p>
-                <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-              </a>
-            </div>
-            <div class="merch-block-price-container">
-              <div class="merch-block-price">$10</div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Merch Block 3 -->
-        <div class="merch-block">
-          <div class="merch-block-image-container">
-            <a href="store/mcr-002/" class="merch-link">
-              <img src="images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
-            </a>
-          </div>
-          <div class="merch-block-details-container">
-            <div class="merch-block-names-container">
-              <a href="store/mcr-002/" class="merch-link">
-                <p class="merch-block-artist-name">CRYHARD</p>
-                <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-              </a>
-            </div>
-            <div class="merch-block-price-container">
-              <div class="merch-block-price">$10</div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Merch Block 4 -->
-        <div class="merch-block">
-          <div class="merch-block-image-container">
-            <a href="store/mcr-002/" class="merch-link">
-              <img src="images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
-            </a>
-          </div>
-          <div class="merch-block-details-container">
-            <div class="merch-block-names-container">
-              <a href="store/mcr-002/" class="merch-link">
-                <p class="merch-block-artist-name">CRYHARD</p>
-                <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-              </a>
-            </div>
-            <div class="merch-block-price-container">
-              <div class="merch-block-price">$10</div>
-            </div>
-          </div>
-        </div>
 
       </div>
     </div>
@@ -182,6 +123,7 @@
           <a href="store">STORE</a>
           <!-- <a href="artists">ARTISTS</a> -->
           <a href="about">ABOUT</a>
+          <a href="#">CART</a>
         </nav>
       </div>
       <div class="footer-horizontal-separator"></div>
