--- a/artists/index.html
+++ b/artists/index.html
@@ -97,9 +97,10 @@
           <div class="footer-vertical-separator"></div>
         </div>
         <nav class="footer-nav">
-          <a href="../store">STORE</a>
-          <a href="../artists">ARTISTS</a>
-          <a href="../about">ABOUT</a>
+          <a href="store">STORE</a>
+          <!-- <a href="artists">ARTISTS</a> -->
+          <a href="about">ABOUT</a>
+          <a href="#">CART</a>
         </nav>
       </div>
       <div class="footer-horizontal-separator"></div>
