responsive latest release section added

--- a/index.html
+++ b/index.html
@@ -53,22 +53,26 @@
       </div>
     </div>
     
-<!--     
+    <!-- Latest Release Section -->
     <div class="latest-release">
-      <div class="tape-stack">
+
+      <div class="side-quests-vol-1-hero">
         <img src="images/side-quests-vol-1-hero.png" alt="Side Quests Vol. 1 Hero">
       </div>
+
       <div class="release-text">
         <h2 class="release-heading">LATEST RELEASE</h2>
         <h3 class="release-title">SIDE QUESTS VOL. 1</h3>
-        <img src="images/rainbow-underline.svg" alt="Rainbow Underline" class="rainbow-underline">
-        <p>The first ever Mystery Class Records release. Nine tracks by Oklahoma artists compiled by our team to show off the massive talent in our community.</p>
+        <div class="rainbow-underline"></div>
+        <p>
+          The first ever Mystery Class Records release. Nine tracks by Oklahoma artists compiled by our team to show off the massive talent in our community.
+        </p>
         <p><strong>Limited to 50 copies.</strong></p>
         <button class="pre-order">
           <img src="images/pre-order-button.svg" alt="Pre-Order Button">
         </button>
       </div>
-    </div> -->
+    </div>
 
     <!-- <div class="store-section">
       <div class="store-grid">
