started on home store page

--- a/index.html
+++ b/index.html
@@ -74,8 +74,66 @@
       </div>
     </div>
 
-    <!-- <div class="store-section">
+    <!-- Store Section -->
+    <div class="store-section">
       <div class="store-grid">
+
+        <div class="merch-block">
+          <div class="merch-block-image-container">
+            <a href="store/mcr-002/" class="merch-link">
+              <img src="images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+            </a>
+          </div>
+          <div class="merch-block-details-container">
+            <div class="merch-block-names-container">
+              <a href="store/mcr-002/" class="merch-link">
+                <p class="merch-block-artist-name">CRYHARD</p>
+                <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+              </a>
+            </div>
+            <div class="merch-block-price-container">
+              <div class="merch-block-price">$10</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="merch-block">
+          <div class="merch-block-image-container">
+            <a href="store/mcr-002/" class="merch-link">
+              <img src="images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+            </a>
+          </div>
+          <div class="merch-block-details-container">
+            <div class="merch-block-names-container">
+              <a href="store/mcr-002/" class="merch-link">
+                <p class="merch-block-artist-name">CRYHARD</p>
+                <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+              </a>
+            </div>
+            <div class="merch-block-price-container">
+              <div class="merch-block-price">$10</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="merch-block">
+          <div class="merch-block-image-container">
+            <a href="store/mcr-002/" class="merch-link">
+              <img src="images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+            </a>
+          </div>
+          <div class="merch-block-details-container">
+            <div class="merch-block-names-container">
+              <a href="store/mcr-002/" class="merch-link">
+                <p class="merch-block-artist-name">CRYHARD</p>
+                <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+              </a>
+            </div>
+            <div class="merch-block-price-container">
+              <div class="merch-block-price">$10</div>
+            </div>
+          </div>
+        </div>
 
         <div class="merch-block">
           <div class="merch-block-image-container">
@@ -98,7 +156,7 @@
 
 
       </div>
-    </div> -->
+    </div>
     
     <!-- Footer Section -->
     <footer class="footer">
