--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <a href="store">STORE</a>
           <!-- <a href="artists">ARTISTS</a> -->
           <a href="about">ABOUT</a>
-          <a href="#">ABOUT</a>
+          <a href="#">CART</a>
         </nav>
       </div>
       <div class="footer-horizontal-separator"></div>
