responsive store page done

--- a/store/index.html
+++ b/store/index.html
@@ -28,7 +28,6 @@
     </div>
     <nav class="nav">
       <a href="../store">STORE</a>
-      <!-- <a href="artists">ARTISTS</a> -->
       <a href="../about">ABOUT</a>
       <a href="#" class="cart">CART</a>
     </nav>
@@ -40,34 +39,92 @@
   </header>
   <div class="rainbow-strip"></div>
   <div class="header-spacer"></div>
+  
 
-  <!-- Store Section -->
   <main class="store-section">
-    <h1 class="store-heading">STORE</h1>
-    <div class="store-grid">
+    <div class="store-container">
+      <h1 class="store-heading">STORE</h1>
+      <div class="store-grid">
 
-      <!-- Merch Block 1 -->
-      <div class="merch-block">
-        <div class="merch-block-image-container">
-          <a href="../store/mcr-002/" class="merch-link">
-            <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
-          </a>
-        </div>
-        <div class="merch-block-details-container">
-          <div class="merch-block-names-container">
+  
+        <div class="merch-block">
+          <div class="merch-block-image-container">
             <a href="../store/mcr-002/" class="merch-link">
-              <p class="merch-block-artist-name">CRYHARD</p>
-              <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+              <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
             </a>
           </div>
-          <div class="merch-block-price-container">
-            <div class="merch-block-price">$10</div>
+          <div class="merch-block-details-container">
+            <div class="merch-block-names-container">
+              <a href="../store/mcr-002/" class="merch-link">
+                <p class="merch-block-artist-name">CRYHARD</p>
+                <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+              </a>
+            </div>
+            <div class="merch-block-price-container">
+              <div class="merch-block-price">$10</div>
+            </div>
           </div>
         </div>
+
+        <div class="merch-block">
+          <div class="merch-block-image-container">
+            <a href="../store/mcr-002/" class="merch-link">
+              <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+            </a>
+          </div>
+          <div class="merch-block-details-container">
+            <div class="merch-block-names-container">
+              <a href="../store/mcr-002/" class="merch-link">
+                <p class="merch-block-artist-name">CRYHARD</p>
+                <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+              </a>
+            </div>
+            <div class="merch-block-price-container">
+              <div class="merch-block-price">$10</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="merch-block">
+          <div class="merch-block-image-container">
+            <a href="../store/mcr-002/" class="merch-link">
+              <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+            </a>
+          </div>
+          <div class="merch-block-details-container">
+            <div class="merch-block-names-container">
+              <a href="../store/mcr-002/" class="merch-link">
+                <p class="merch-block-artist-name">CRYHARD</p>
+                <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+              </a>
+            </div>
+            <div class="merch-block-price-container">
+              <div class="merch-block-price">$10</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="merch-block">
+          <div class="merch-block-image-container">
+            <a href="../store/mcr-002/" class="merch-link">
+              <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+            </a>
+          </div>
+          <div class="merch-block-details-container">
+            <div class="merch-block-names-container">
+              <a href="../store/mcr-002/" class="merch-link">
+                <p class="merch-block-artist-name">CRYHARD</p>
+                <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+              </a>
+            </div>
+            <div class="merch-block-price-container">
+              <div class="merch-block-price">$10</div>
+            </div>
+          </div>
+        </div>
+
+
       </div>
-
-      <!-- Add additional merch blocks below if needed -->
-
     </div>
   </main>
 
@@ -83,9 +140,8 @@
         <div class="footer-vertical-separator"></div>
       </div>
       <nav class="footer-nav">
-        <a href="store">STORE</a>
-          <!-- <a href="artists">ARTISTS</a> -->
-          <a href="about">ABOUT</a>
+        <a href="../store">STORE</a>
+          <a href="../about">ABOUT</a>
           <a href="#">CART</a>
       </nav>
     </div>
