aligned store header left

--- a/about/index.html
+++ b/about/index.html
@@ -28,7 +28,6 @@
     </div>
     <nav class="nav">
       <a href="../store">STORE</a>
-      <!-- <a href="artists">ARTISTS</a> -->
       <a href="../about">ABOUT</a>
       <a href="#" class="cart">CART</a>
     </nav>
@@ -71,9 +70,8 @@
         <div class="footer-vertical-separator"></div>
       </div>
       <nav class="footer-nav">
-        <a href="store">STORE</a>
-        <!-- <a href="artists">ARTISTS</a> -->
-        <a href="about">ABOUT</a>
+        <a href="../store">STORE</a>
+        <a href="../about">ABOUT</a>
         <a href="#">CART</a>
       </nav>
     </div>
