--- a/store/index.html
+++ b/store/index.html
@@ -40,7 +40,7 @@
   <div class="rainbow-strip"></div>
   <div class="header-spacer"></div>
   
-
+  <!-- Store Section -->
   <main class="store-section">
     <div class="store-container">
       <h1 class="store-heading">STORE</h1>
