cleaned link urls

--- a/about/index.html
+++ b/about/index.html
@@ -22,14 +22,14 @@
   <!-- Header Section -->
   <header class="header" data-expanded="false">
     <div class="logo">
-      <a href="../index.html">
+      <a href="../">
         <img src="../images/header/header-logo.svg" alt="Logo">
       </a>
     </div>
     <nav class="nav">
       <a href="../store">STORE</a>
       <a href="../about">ABOUT</a>
-      <a href="#" class="cart">CART</a>
+      <a href="" class="cart">CART</a>
     </nav>
     <div class="hamburger-icon">
       <button aria-label="Toggle Menu">
@@ -45,7 +45,7 @@
     <h1 class="about-heading">ABOUT</h1>
     <div class="about-content">
       <div class="about-image-container">
-        <!-- Placeholder for image -->
+        <img src="../images/mcr-about-photo.png" alt="Mystery Class Records Logo">
       </div>
       <div class="about-text">
         <p>
@@ -72,7 +72,7 @@
       <nav class="footer-nav">
         <a href="../store">STORE</a>
         <a href="../about">ABOUT</a>
-        <a href="#">CART</a>
+        <a href="">CART</a>
       </nav>
     </div>
     <div class="footer-horizontal-separator"></div>
