--- a/artists/cryhard/index.html
+++ b/artists/cryhard/index.html
@@ -30,7 +30,7 @@
         <a href="../../store">STORE</a>
         <a href="../../artists">ARTISTS</a>
         <a href="../../about">ABOUT</a>
-        <a href="#" class="cart">CART</a>
+        <a href="" class="cart">CART</a>
       </nav>
       <div class="rainbow-strip">
         <img src="../../images/header/header-rainbow-strip.svg" alt="Rainbow Strip">
@@ -53,10 +53,10 @@
       <div class="artist-buttons">
         <button class="listen-now-button">▶ Listen Now</button>
         <div class="artist-social-icons">
-          <a href="#"><img src="../../images/social-icons/facebook-icon.svg" alt="Facebook"></a>
-          <a href="#"><img src="../../images/social-icons/instagram-icon.svg" alt="Instagram"></a>
-          <a href="#"><img src="../../images/social-icons/youtube-icon.svg" alt="YouTube"></a>
-          <a href="#"><img src="../../images/social-icons/tiktok-icon.svg" alt="TikTok"></a>
+          <a href=""><img src="../../images/social-icons/facebook-icon.svg" alt="Facebook"></a>
+          <a href=""><img src="../../images/social-icons/instagram-icon.svg" alt="Instagram"></a>
+          <a href=""><img src="../../images/social-icons/youtube-icon.svg" alt="YouTube"></a>
+          <a href=""><img src="../../images/social-icons/tiktok-icon.svg" alt="TikTok"></a>
         </div>
       </div>
       <div class="artist-description">
