--- a/artists/index.html
+++ b/artists/index.html
@@ -22,7 +22,7 @@
     <!-- Header Section -->
     <header class="header">
       <div class="logo">
-        <a href="../index.html">
+        <a href="../">
           <img src="../images/header/header-logo.svg" alt="Logo">
         </a>
       </div>
@@ -30,7 +30,7 @@
         <a href="../store">STORE</a>
         <a href="../artists">ARTISTS</a>
         <a href="../about">ABOUT</a>
-        <a href="#" class="cart">CART</a>
+        <a href="" class="cart">CART</a>
       </nav>
       <div class="rainbow-strip">
         <img src="../images/header/header-rainbow-strip.svg" alt="Rainbow Strip">
@@ -100,7 +100,7 @@
           <a href="store">STORE</a>
           <!-- <a href="artists">ARTISTS</a> -->
           <a href="about">ABOUT</a>
-          <a href="#">CART</a>
+          <a href="">CART</a>
         </nav>
       </div>
       <div class="footer-horizontal-separator"></div>
