--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <!-- Header Section -->
     <header class="header" data-expanded="false">
       <div class="logo">
-        <a href="index.html">
+        <a href="">
           <img src="images/header/header-logo.svg" alt="Logo">
         </a>
       </div>
       <nav class="nav">
         <a href="store">STORE</a>
         <a href="about">ABOUT</a>
-        <a href="#" class="cart">CART</a>
+        <a href="" class="cart">CART</a>
       </nav>
       <div class="hamburger-icon">
         <button aria-label="Toggle Menu">
@@ -162,7 +162,7 @@
       <div class="footer-top">
         <div class="footer-logo-container">
           <div class="footer-logo">
-            <a href="#">
+            <a href="">
               <img src="images/footer/footer-logo.svg" alt="Footer Logo">
             </a>
           </div>
@@ -171,7 +171,7 @@
         <nav class="footer-nav">
           <a href="store">STORE</a>
           <a href="about">ABOUT</a>
-          <a href="#">CART</a>
+          <a href="">CART</a>
         </nav>
       </div>
       <div class="footer-horizontal-separator"></div>
