--- a/about/index.html
+++ b/about/index.html
@@ -49,10 +49,14 @@
       </div>
       <div class="about-text">
         <p>
-          Mystery Class Records is a DIY label founded by a group of friends united by their shared passion for music, creation, and connection. Our mission is to empower artists within our community, providing the resources and support needed to bring their unique and creative visions to life.
-          <br><br>Based in Oklahoma, we’re dedicated to enhancing the local music scene through a range of services designed to help artists thrive. These include HiFi in-house cassette duplication, graphic design, videography, marketing, record deals, vinyl orders, and physical media distribution. By offering these resources, we aim to amplify the incredible talent in Oklahoma and build a stronger, more connected music community.
-          At Mystery Class Records, we’re more than just a label—we’re a team of creators working to release unexplainably good music and support the next wave of groundbreaking artists. Stay tuned for some exciting projects and releases; we can’t wait to share them with you.
-          <br><br>— The MCR Team
+          We're Mystery Class Records, a DIY label made up of a few friends who have a passion for music, creation, and connection.
+          Our mission is to provide resources and assistance to artists in our community so that they can fulfill their unique and creative visions.
+          <br><br>We provide a variety of services to the Oklahoma music community, including:
+          HIFI in-house cassette duplication, graphic design, videography, marketing services, record deals, vinyl orders, and physical media distribution.
+          <br><br>We’re here to boost the amazing talent coming from Oklahoma and strengthen our music community with the services we provide.
+          We can’t wait to make some unexplainably good music with you!
+
+          <p class="mcr-signature"><br>— The MCR Team</p>
         </p>
       </div>
     </div>
