--- a/store/index.html
+++ b/store/index.html
@@ -47,81 +47,90 @@
       <div class="store-grid">
 
   
-        <div class="merch-block">
-          <div class="merch-block-image-container">
-            <a href="../store/mcr-002/" class="merch-link">
+        <a href="mcr-002/" class="merch-link">
+          <div class="merch-block">
+            <div class="merch-block-image-container">
               <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
-            </a>
-          </div>
-          <div class="merch-block-details-container">
-            <div class="merch-block-names-container">
-              <a href="../store/mcr-002/" class="merch-link">
+            </div>
+            <div class="merch-block-details-container">
+              <div class="merch-block-names-container">
                 <p class="merch-block-artist-name">CRYHARD</p>
                 <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-              </a>
-            </div>
-            <div class="merch-block-price-container">
-              <div class="merch-block-price">$10</div>
+              </div>
+              <div class="merch-block-price-container">
+                <div class="merch-block-price">$10</div>
+              </div>
             </div>
           </div>
-        </div>
+        </a>
 
-        <div class="merch-block">
-          <div class="merch-block-image-container">
-            <a href="../store/mcr-002/" class="merch-link">
+        <a href="mcr-002/" class="merch-link">
+          <div class="merch-block">
+            <div class="merch-block-image-container">
               <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
-            </a>
-          </div>
-          <div class="merch-block-details-container">
-            <div class="merch-block-names-container">
-              <a href="../store/mcr-002/" class="merch-link">
+            </div>
+            <div class="merch-block-details-container">
+              <div class="merch-block-names-container">
                 <p class="merch-block-artist-name">CRYHARD</p>
                 <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-              </a>
-            </div>
-            <div class="merch-block-price-container">
-              <div class="merch-block-price">$10</div>
+              </div>
+              <div class="merch-block-price-container">
+                <div class="merch-block-price">$10</div>
+              </div>
             </div>
           </div>
-        </div>
+        </a>
 
-        <div class="merch-block">
-          <div class="merch-block-image-container">
-            <a href="../store/mcr-002/" class="merch-link">
+        <a href="mcr-002/" class="merch-link">
+          <div class="merch-block">
+            <div class="merch-block-image-container">
               <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
-            </a>
-          </div>
-          <div class="merch-block-details-container">
-            <div class="merch-block-names-container">
-              <a href="../store/mcr-002/" class="merch-link">
+            </div>
+            <div class="merch-block-details-container">
+              <div class="merch-block-names-container">
                 <p class="merch-block-artist-name">CRYHARD</p>
                 <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-              </a>
-            </div>
-            <div class="merch-block-price-container">
-              <div class="merch-block-price">$10</div>
+              </div>
+              <div class="merch-block-price-container">
+                <div class="merch-block-price">$10</div>
+              </div>
             </div>
           </div>
-        </div>
+        </a>
 
-        <div class="merch-block">
-          <div class="merch-block-image-container">
-            <a href="../store/mcr-002/" class="merch-link">
+        <a href="mcr-002/" class="merch-link">
+          <div class="merch-block">
+            <div class="merch-block-image-container">
               <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
-            </a>
-          </div>
-          <div class="merch-block-details-container">
-            <div class="merch-block-names-container">
-              <a href="../store/mcr-002/" class="merch-link">
+            </div>
+            <div class="merch-block-details-container">
+              <div class="merch-block-names-container">
                 <p class="merch-block-artist-name">CRYHARD</p>
                 <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-              </a>
-            </div>
-            <div class="merch-block-price-container">
-              <div class="merch-block-price">$10</div>
+              </div>
+              <div class="merch-block-price-container">
+                <div class="merch-block-price">$10</div>
+              </div>
             </div>
           </div>
-        </div>
+        </a>
+
+        <a href="mcr-002/" class="merch-link">
+          <div class="merch-block">
+            <div class="merch-block-image-container">
+              <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+            </div>
+            <div class="merch-block-details-container">
+              <div class="merch-block-names-container">
+                <p class="merch-block-artist-name">CRYHARD</p>
+                <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+              </div>
+              <div class="merch-block-price-container">
+                <div class="merch-block-price">$10</div>
+              </div>
+            </div>
+          </div>
+        </a>
 
 
       </div>
