--- a/store/index.html
+++ b/store/index.html
@@ -1,187 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <!-- Metadata and Page Settings -->
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Store - Mystery Class Records</title>
+  <head>
+    <!-- Metadata and Page Settings -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Store - Mystery Class Records</title>
 
-  <!-- Favicon -->
-  <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <!-- Favicon -->
+    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
 
-  <!-- Fonts and Stylesheets -->
-  <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
-  <link rel="stylesheet" href="../shared-styles/global.css">
-  <link rel="stylesheet" href="../shared-styles/header.css">
-  <link rel="stylesheet" href="../shared-styles/footer.css">
-  <link rel="stylesheet" href="store.css">
-</head>
+    <!-- Fonts and Stylesheets -->
+    <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
+    <link rel="stylesheet" href="../shared-styles/global.css">
+    <link rel="stylesheet" href="../shared-styles/header.css">
+    <link rel="stylesheet" href="../shared-styles/footer.css">
+    <link rel="stylesheet" href="store.css">
+  </head>
 
-<body>
-  <!-- Header Section -->
-  <header class="header" data-expanded="false">
-    <div class="logo">
-      <a href="../">
-        <img src="../images/header/header-logo.svg" alt="Logo">
-      </a>
-    </div>
-    <nav class="nav">
-      <a href="../store">STORE</a>
-      <a href="../about">ABOUT</a>
-      <a href="" class="cart">CART</a>
-    </nav>
-    <div class="hamburger-icon">
-      <button aria-label="Toggle Menu">
-        <img src="../images/header/hamburger-icon.svg" alt="Hamburger Menu">
-      </button>
-    </div>
-  </header>
-  <div class="rainbow-strip"></div>
-  <div class="header-spacer"></div>
-  
-  <!-- Store Section -->
-  <main class="store-section">
-    <div class="store-container">
-      <h1 class="store-heading">STORE</h1>
-      <div class="store-grid">
-
-  
-        <a href="mcr-002/" class="merch-link">
-          <div class="merch-block">
-            <div class="merch-block-image-container">
-              <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
-            </div>
-            <div class="merch-block-details-container">
-              <div class="merch-block-names-container">
-                <p class="merch-block-artist-name">CRYHARD</p>
-                <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-              </div>
-              <div class="merch-block-price-container">
-                <div class="merch-block-price">$10</div>
-              </div>
-            </div>
-          </div>
+  <body>
+    <!-- Header Section -->
+    <header class="header" data-expanded="false">
+      <div class="logo">
+        <a href="../">
+          <img src="../images/header/header-logo.svg" alt="Logo">
         </a>
-
-        <a href="mcr-002/" class="merch-link">
-          <div class="merch-block">
-            <div class="merch-block-image-container">
-              <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
-            </div>
-            <div class="merch-block-details-container">
-              <div class="merch-block-names-container">
-                <p class="merch-block-artist-name">CRYHARD</p>
-                <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-              </div>
-              <div class="merch-block-price-container">
-                <div class="merch-block-price">$10</div>
-              </div>
-            </div>
-          </div>
-        </a>
-
-        <a href="mcr-002/" class="merch-link">
-          <div class="merch-block">
-            <div class="merch-block-image-container">
-              <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
-            </div>
-            <div class="merch-block-details-container">
-              <div class="merch-block-names-container">
-                <p class="merch-block-artist-name">CRYHARD</p>
-                <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-              </div>
-              <div class="merch-block-price-container">
-                <div class="merch-block-price">$10</div>
-              </div>
-            </div>
-          </div>
-        </a>
-
-        <a href="mcr-002/" class="merch-link">
-          <div class="merch-block">
-            <div class="merch-block-image-container">
-              <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
-            </div>
-            <div class="merch-block-details-container">
-              <div class="merch-block-names-container">
-                <p class="merch-block-artist-name">CRYHARD</p>
-                <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-              </div>
-              <div class="merch-block-price-container">
-                <div class="merch-block-price">$10</div>
-              </div>
-            </div>
-          </div>
-        </a>
-
-        <a href="mcr-002/" class="merch-link">
-          <div class="merch-block">
-            <div class="merch-block-image-container">
-              <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
-            </div>
-            <div class="merch-block-details-container">
-              <div class="merch-block-names-container">
-                <p class="merch-block-artist-name">CRYHARD</p>
-                <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-              </div>
-              <div class="merch-block-price-container">
-                <div class="merch-block-price">$10</div>
-              </div>
-            </div>
-          </div>
-        </a>
-
-
       </div>
-    </div>
-  </main>
+      <nav class="nav">
+        <a href="../store">STORE</a>
+        <a href="../about">ABOUT</a>
+        <a href="../cart-page" class="cart">CART</a>
+      </nav>
+      <div class="hamburger-icon">
+        <button aria-label="Toggle Menu">
+          <img src="../images/header/hamburger-icon.svg" alt="Hamburger Menu">
+        </button>
+      </div>
+    </header>
+    <div class="rainbow-strip"></div>
+    <div class="header-spacer"></div>
+    
+    <!-- Store Section -->
+    <main class="store-section">
+      <div class="store-container">
+        <h1 class="store-heading">STORE</h1>
+        <div class="store-grid">
 
-  <!-- Footer Section -->
-  <footer class="footer">
-    <div class="footer-top">
-      <div class="footer-logo-container">
-        <div class="footer-logo">
-          <a href="../">
-            <img src="../images/footer/footer-logo.svg" alt="Footer Logo">
+    
+          <a href="mcr-002/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">CRYHARD</p>
+                  <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="mcr-002/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">CRYHARD</p>
+                  <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="mcr-002/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">CRYHARD</p>
+                  <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="mcr-002/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">CRYHARD</p>
+                  <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="mcr-002/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">CRYHARD</p>
+                  <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
+                </div>
+              </div>
+            </div>
+          </a>
+
+
+        </div>
+      </div>
+    </main>
+
+    <!-- Footer Section -->
+    <footer class="footer">
+      <div class="footer-top">
+        <div class="footer-logo-container">
+          <div class="footer-logo">
+            <a href="../">
+              <img src="../images/footer/footer-logo.svg" alt="Footer Logo">
+            </a>
+          </div>
+          <div class="footer-vertical-separator"></div>
+        </div>
+        <nav class="footer-nav">
+          <a href="../store">STORE</a>
+            <a href="../about">ABOUT</a>
+            <a href="">CART</a>
+        </nav>
+      </div>
+      <div class="footer-horizontal-separator"></div>
+      <div class="footer-bottom">
+        <div class="footer-tagline">
+          <p>UNEXPLAINABLY GOOD MUSIC.</p>
+          <img src="../images/footer/footer-icon.svg" alt="Footer Icon">
+        </div>
+        <div class="footer-copyright">
+          <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
+        </div>
+        <div class="footer-social">
+          <a href="https://www.facebook.com/profile.php?id=61571429339039" target="_blank">
+            <img src="../images/social-icons/facebook-icon.svg" alt="Facebook Icon">
+          </a>
+          <a href="https://www.instagram.com/mysteryclass/" target="_blank">
+            <img src="../images/social-icons/instagram-icon.svg" alt="Instagram Icon">
+          </a>
+          <a href="https://www.youtube.com/@mysteryclassrecords9824" target="_blank">
+            <img src="../images/social-icons/youtube-icon.svg" alt="YouTube Icon">
+          </a>
+          <a href="https://www.tiktok.com/@mysteryclassrecords" target="_blank">
+            <img src="../images/social-icons/tiktok-icon.svg" alt="TikTok Icon">
           </a>
         </div>
-        <div class="footer-vertical-separator"></div>
       </div>
-      <nav class="footer-nav">
-        <a href="../store">STORE</a>
-          <a href="../about">ABOUT</a>
-          <a href="">CART</a>
-      </nav>
-    </div>
-    <div class="footer-horizontal-separator"></div>
-    <div class="footer-bottom">
-      <div class="footer-tagline">
-        <p>UNEXPLAINABLY GOOD MUSIC.</p>
-        <img src="../images/footer/footer-icon.svg" alt="Footer Icon">
-      </div>
-      <div class="footer-copyright">
-        <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
-      </div>
-      <div class="footer-social">
-        <a href="https://www.facebook.com/profile.php?id=61571429339039" target="_blank">
-          <img src="../images/social-icons/facebook-icon.svg" alt="Facebook Icon">
-        </a>
-        <a href="https://www.instagram.com/mysteryclass/" target="_blank">
-          <img src="../images/social-icons/instagram-icon.svg" alt="Instagram Icon">
-        </a>
-        <a href="https://www.youtube.com/@mysteryclassrecords9824" target="_blank">
-          <img src="../images/social-icons/youtube-icon.svg" alt="YouTube Icon">
-        </a>
-        <a href="https://www.tiktok.com/@mysteryclassrecords" target="_blank">
-          <img src="../images/social-icons/tiktok-icon.svg" alt="TikTok Icon">
-        </a>
-      </div>
-    </div>
-  </footer>
+    </footer>
 
-    <!-- Scripts -->
-    <script src="../scripts/MobileHeaderExpand.js"></script>
+      <!-- Scripts -->
+      <script src="../scripts/MobileHeaderExpand.js"></script>
 
-</body>
+  </body>
 </html>
