--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
         <a href="store/mcr-002/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+              <img src="images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
+              <img src="images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -98,7 +99,8 @@
         <a href="store/mcr-002/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+              <img src="images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
+              <img src="images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -115,7 +117,8 @@
         <a href="store/mcr-002/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+              <img src="images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
+              <img src="images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -132,7 +135,8 @@
         <a href="store/mcr-002/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+              <img src="images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
+              <img src="images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -149,7 +153,8 @@
         <a href="store/mcr-002/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+              <img src="images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
+              <img src="images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -212,5 +217,6 @@
 
     <!-- Scripts -->
     <script src="scripts/MobileHeaderExpand.js"></script>
+    <script src="scripts/MerchBlockScrollSwap.js"></script>
   </body>
 </html>
