--- a/store/index.html
+++ b/store/index.html
@@ -47,10 +47,11 @@
         <div class="store-grid">
 
     
-          <a href="mcr-002/" class="merch-link">
+          <a href="store/mcr-002/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+                <img src="../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
+                <img src="../images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -64,10 +65,11 @@
             </div>
           </a>
 
-          <a href="mcr-002/" class="merch-link">
+          <a href="store/mcr-002/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+                <img src="../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
+                <img src="../images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -81,10 +83,11 @@
             </div>
           </a>
 
-          <a href="mcr-002/" class="merch-link">
+          <a href="store/mcr-002/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+                <img src="../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
+                <img src="../images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -98,10 +101,11 @@
             </div>
           </a>
 
-          <a href="mcr-002/" class="merch-link">
+          <a href="store/mcr-002/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+                <img src="../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
+                <img src="../images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -115,10 +119,11 @@
             </div>
           </a>
 
-          <a href="mcr-002/" class="merch-link">
+          <a href="store/mcr-002/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+                <img src="../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
+                <img src="../images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -182,6 +187,7 @@
 
       <!-- Scripts -->
       <script src="../scripts/MobileHeaderExpand.js"></script>
+      <script src="../scripts/MerchBlockScrollSwap.js"></script>
 
   </body>
 </html>
