laptop product section in progress

--- a/store/index.html
+++ b/store/index.html
@@ -47,7 +47,7 @@
         <div class="store-grid">
 
     
-          <a href="store/mcr-002/" class="merch-link">
+          <a href="../store/mcr-002/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <img src="../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
@@ -65,7 +65,7 @@
             </div>
           </a>
 
-          <a href="store/mcr-002/" class="merch-link">
+          <a href="../store/mcr-002/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <img src="../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
@@ -83,7 +83,7 @@
             </div>
           </a>
 
-          <a href="store/mcr-002/" class="merch-link">
+          <a href="../store/mcr-002/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <img src="../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
@@ -101,7 +101,7 @@
             </div>
           </a>
 
-          <a href="store/mcr-002/" class="merch-link">
+          <a href="../store/mcr-002/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <img src="../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
@@ -119,7 +119,7 @@
             </div>
           </a>
 
-          <a href="store/mcr-002/" class="merch-link">
+          <a href="../store/mcr-002/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <img src="../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
