--- a/store/mcr-002/index.html
+++ b/store/mcr-002/index.html
@@ -44,12 +44,13 @@
     <main class="product-section">
       <div class="product-content-container">
         <div class="product-image">
-          <img src="../../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette">
+          <img src="../../images/products/mcr-002/mcr-002-staged.webp" alt="Cryhard - Of Course I Will Cassette">
         </div>
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
           <h1 class="product-title">OF COURSE I WILL</h1>
           <h2 class="product-artist">Cryhard</h2>
+          <div class="whitespace"></div>
           <p class="release-date">Release Date: July 19, 2024</p>
           <hr class="separator">
           <div class="price-and-button">
@@ -61,6 +62,7 @@
           <hr class="separator">
           <div class="track-list">
             <h3>Track List</h3>
+            <div class="whitespace"></div>
             <ol>
               <li>Mind Flayer</li>
               <li>Dementors</li>
@@ -76,7 +78,10 @@
           <hr class="separator">
           <div class="pressing-info">
             <h3>Pressing Info:</h3>
-            <p>First Pressing<br>Black Vinyl x100<br>MCR-002</p>
+            <div class="whitespace"></div>
+            <p>First Pressing</p>
+            <p>Black Vinyl x100</p>
+            <p>MCR-002</p>
           </div>
         </div>
       </div>
