responsive product section

--- a/store/mcr-002/index.html
+++ b/store/mcr-002/index.html
@@ -22,7 +22,7 @@
     <!-- Header Section -->
   <header class="header" data-expanded="false">
     <div class="logo">
-      <a href="../../../">
+      <a href="../../">
         <img src="../../images/header/header-logo.svg" alt="Logo">
       </a>
     </div>
@@ -49,6 +49,7 @@
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
           <h1 class="product-title">OF COURSE I WILL</h1>
+          <div class="whitespace"></div>
           <h2 class="product-artist">Cryhard</h2>
           <div class="whitespace"></div>
           <p class="release-date">Release Date: July 19, 2024</p>
@@ -247,6 +248,7 @@
     <!-- Import Scripts -->
     <script src="../../scripts/AddToCart.js"></script>
     <script src="../../scripts/MobileHeaderExpand.js"></script>
+    <script src="../../scripts/ProductZoom.js"></script>
 
   </body>
 </html>
