--- a/store/mcr-002/index.html
+++ b/store/mcr-002/index.html
@@ -116,7 +116,7 @@
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <a href="../../store/mcr-002/" class="merch-link">
-                  <img src="../../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+                  <img src="../../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
                 </a>
               </div>
               <div class="merch-block-details-container">
@@ -136,7 +136,7 @@
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <a href="../../store/mcr-002/" class="merch-link">
-                  <img src="../../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+                  <img src="../../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
                 </a>
               </div>
               <div class="merch-block-details-container">
@@ -156,7 +156,7 @@
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <a href="../../store/mcr-002/" class="merch-link">
-                  <img src="../../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+                  <img src="../../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
                 </a>
               </div>
               <div class="merch-block-details-container">
@@ -176,7 +176,7 @@
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <a href="../../store/mcr-002/" class="merch-link">
-                  <img src="../../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+                  <img src="../../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
                 </a>
               </div>
               <div class="merch-block-details-container">
