related merch progress

--- a/store/mcr-002/index.html
+++ b/store/mcr-002/index.html
@@ -99,7 +99,7 @@
       </p>
     </section>
 
-    <!-- Related Merch Section -->
+    <!-- Related Merch Section (Updated with Store Section from Homepage) -->
     <section class="related-merch-section">
       <div class="related-merch-content">
         <!-- Rainbow Container Top -->
@@ -107,90 +107,84 @@
           <img src="../../images/rainbow-container-top.png" alt="Rainbow Container Top">
         </div>
 
-        <!-- Merch Content -->
-        <div class="related-merch-box">
-          <h2 class="related-merch-heading">RELATED</h2>
-          <div class="merch-grid">
+        <!-- Store Section -->
+        <div class="store-section">
+          <h2 class="store-heading">RELATED MERCH</h2>
+          <div class="store-grid">
 
-            <!-- Merch Block 1 -->
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <a href="../../store/mcr-002/" class="merch-link">
-                  <img src="../../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
-                </a>
-              </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <a href="../../store/mcr-002/" class="merch-link">
+            <a href="../../store/mcr-002/" class="merch-link">
+              <div class="merch-block">
+                <div class="merch-block-image-container">
+                  <img src="../../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
+                  <img src="../../images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
+                </div>
+                <div class="merch-block-details-container">
+                  <div class="merch-block-names-container">
                     <p class="merch-block-artist-name">CRYHARD</p>
                     <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-                  </a>
-                </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$10</div>
+                  </div>
+                  <div class="merch-block-price-container">
+                    <div class="merch-block-price">$10</div>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
 
-            <!-- Merch Block 2 -->
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <a href="../../store/mcr-002/" class="merch-link">
-                  <img src="../../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
-                </a>
-              </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <a href="../../store/mcr-002/" class="merch-link">
+            <a href="../../store/mcr-002/" class="merch-link">
+              <div class="merch-block">
+                <div class="merch-block-image-container">
+                  <img src="../../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
+                  <img src="../../images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
+                </div>
+                <div class="merch-block-details-container">
+                  <div class="merch-block-names-container">
                     <p class="merch-block-artist-name">CRYHARD</p>
                     <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-                  </a>
-                </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$10</div>
+                  </div>
+                  <div class="merch-block-price-container">
+                    <div class="merch-block-price">$10</div>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
 
-            <!-- Merch Block 3 -->
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <a href="../../store/mcr-002/" class="merch-link">
-                  <img src="../../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
-                </a>
-              </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <a href="../../store/mcr-002/" class="merch-link">
+            <a href="../../store/mcr-002/" class="merch-link">
+              <div class="merch-block">
+                <div class="merch-block-image-container">
+                  <img src="../../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
+                  <img src="../../images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
+                </div>
+                <div class="merch-block-details-container">
+                  <div class="merch-block-names-container">
                     <p class="merch-block-artist-name">CRYHARD</p>
                     <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-                  </a>
-                </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$10</div>
+                  </div>
+                  <div class="merch-block-price-container">
+                    <div class="merch-block-price">$10</div>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
 
-            <!-- Merch Block 4 -->
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <a href="../../store/mcr-002/" class="merch-link">
-                  <img src="../../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
-                </a>
-              </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <a href="../../store/mcr-002/" class="merch-link">
+            <a href="../../store/mcr-002/" class="merch-link">
+              <div class="merch-block">
+                <div class="merch-block-image-container">
+                  <img src="../../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
+                  <img src="../../images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
+                </div>
+                <div class="merch-block-details-container">
+                  <div class="merch-block-names-container">
                     <p class="merch-block-artist-name">CRYHARD</p>
                     <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-                  </a>
-                </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$10</div>
+                  </div>
+                  <div class="merch-block-price-container">
+                    <div class="merch-block-price">$10</div>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
+
+            <!-- Additional Merch Blocks Can Be Added Here -->
 
           </div>
         </div>
@@ -249,6 +243,7 @@
     <script src="../../scripts/AddToCart.js"></script>
     <script src="../../scripts/MobileHeaderExpand.js"></script>
     <script src="../../scripts/ProductZoom.js"></script>
+    <script src="../../scripts/MerchBlockScrollSwap.js"></script>
 
   </body>
 </html>
