--- a/store/mcr-002/index.html
+++ b/store/mcr-002/index.html
@@ -109,7 +109,7 @@
 
         <!-- Store Section -->
         <div class="store-section">
-          <h2 class="store-heading">RELATED MERCH</h2>
+          <h2 class="store-heading">RELATED</h2>
           <div class="store-grid">
 
             <a href="../../store/mcr-002/" class="merch-link">
